chore: Move app to head of project and remove starter folder

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="FragmentTitleTextStyle">
+        <item name="android:textSize">40dp</item>
+    </style>
+
 </resources>
