--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -21,4 +21,9 @@
         android:name="com.udacity.shoestore.WelcomeFragment"
         android:label="fragment_welcome"
         tools:layout="@layout/fragment_welcome"/>
+    <fragment
+        android:id="@+id/instructionsFragment"
+        android:name="com.udacity.shoestore.InstructionsFragment"
+        android:label="InstructionsFragment"
+        tools:layout="@layout/fragment_instructions"/>
 </navigation>
