--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -3,14 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO add image button -->
-
-    <data>
-        <variable
-            name="shoeListViewModel"
-            type="com.udacity.shoestore.shoelist.ShoeListViewModel"/>
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,8 +25,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/shoeNameInput"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="hint" />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -78,11 +69,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/shoeBrandInput"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="hint" />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
-
-        <!-- TODO Add shoe size input -->
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/shoeDescriptionTextInputLayout"
@@ -102,8 +90,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/shoeDescriptionInput"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="hint" />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
