--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -8,6 +8,28 @@
         android:layout_height="match_parent"
         tools:context="com.udacity.shoestore.shoe.ShoeDetailFragment">
 
+<!--        <LinearLayout-->
+<!--            android:id="@+id/shoeImagesLayout"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/shoeNameTextInputLayout"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
+
+<!--            <ImageView-->
+<!--                android:id="@+id/shoeImages"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                app:srcCompat="@android:drawable/ic_menu_gallery" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/addShoeImagesButton"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:text="Button" />-->
+<!--        </LinearLayout>-->
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/shoeNameTextInputLayout"
             android:layout_width="match_parent"
