--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -14,18 +14,14 @@
         android:name="com.udacity.shoestore.WelcomeFragment"
         tools:layout="@layout/fragment_welcome">
         <action
-            android:id="@+id/action_welcomeFragment_to_shoeListFragment"
-            app:destination="@id/shoeListFragment"
+            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
+            app:destination="@id/instructionsFragment"
             app:popUpTo="@id/welcomeFragment" />
     </fragment>
     <fragment
         android:id="@+id/instructionsFragment"
         android:name="com.udacity.shoestore.InstructionsFragment"
         tools:layout="@layout/fragment_instructions">
-        <action
-            android:id="@+id/action_instructionsFragment_to_shoeDetailFragment"
-            app:destination="@id/shoeDetailFragment"
-            app:popUpTo="@id/instructionsFragment" />
         <action
             android:id="@+id/action_instructionsFragment_to_shoeListFragment"
             app:destination="@id/shoeListFragment"
