--- a/app/src/main/res/layout/shoe_item.xml
+++ b/app/src/main/res/layout/shoe_item.xml
@@ -1,5 +1,4 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -31,26 +30,28 @@
                 android:id="@+id/nameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:text="@{shoe.name}"/>
 
             <TextView
                 android:id="@+id/sizeText"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="@{Double.toString(shoe.size)}"/>
 
             <TextView
                 android:id="@+id/brandText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{shoe.brand}" />
+                android:text="@{shoe.brand}"/>
 
             <TextView
                 android:id="@+id/descriptionText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{shoe.description" />
+                android:text="@{shoe.description}"/>
         </LinearLayout>
     </LinearLayout>
 
