--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.udacity.shoestore.LoginFragment">
+        tools:context="com.udacity.shoestore.views.LoginFragment">
 
         <!-- TODO Center the whole fields alltogether not just the Login...text -->
 
