--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.udacity.shoestore.shoe.ShoeDetailFragment">
+        tools:context="com.udacity.shoestore.views.ShoeDetailFragment">
 
 <!--        <LinearLayout-->
 <!--            android:id="@+id/shoeImagesLayout"-->
