--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -6,13 +6,13 @@
     <data>
         <variable
             name="shoeListViewModel"
-            type="com.udacity.shoestore.shoelist.ShoeListViewModel" />
+            type="com.udacity.shoestore.ShoeListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.udacity.shoestore.shoelist.ShoeListFragment">
+        tools:context="com.udacity.shoestore.views.ShoeListFragment">
 
         <ScrollView
             android:id="@+id/shoeListView"
