--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -3,32 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="shoe"
+            type="com.udacity.shoestore.models.Shoe" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.udacity.shoestore.views.ShoeDetailFragment">
-
-<!--        <LinearLayout-->
-<!--            android:id="@+id/shoeImagesLayout"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="horizontal"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/shoeNameTextInputLayout"-->
-<!--            app:layout_constraintTop_toTopOf="parent">-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/shoeImages"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                app:srcCompat="@android:drawable/ic_menu_gallery" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/addShoeImagesButton"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_weight="1"-->
-<!--                android:text="Button" />-->
-<!--        </LinearLayout>-->
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/shoeNameTextInputLayout"
@@ -43,7 +27,8 @@
                 android:id="@+id/shoeNameInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/shoe_name_text"/>
+                android:hint="@string/shoe_name_text"
+                android:text="@={shoe.name}"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -61,7 +46,8 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:inputType="numberDecimal"
-                android:hint="@string/shoe_size_text"/>
+                android:hint="@string/shoe_size_text"
+                android:text="@={`` + shoe.size}"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,7 +63,8 @@
                 android:id="@+id/shoeBrandInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/shoe_brand_text"/>
+                android:hint="@string/shoe_brand_text"
+                android:text="@={shoe.brand}"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -93,7 +80,8 @@
                 android:id="@+id/shoeDescriptionInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/shoe_description_text"/>
+                android:hint="@string/shoe_description_text"
+                android:text="@={shoe.description}"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
