--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -13,6 +13,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/layoutEdge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.udacity.shoestore.views.ShoeDetailFragment">
