--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,4 +24,8 @@
         <item name="android:textSize">15dp</item>
     </style>
 
+    <style name="layoutEdge">
+        <item name="android:layout_margin">@dimen/marginWide</item>
+    </style>
+
 </resources>
