--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="marginWide">16dp</dimen>
+
+    <dimen name="titleTextSize">30dp</dimen>
+    <dimen name="textSize">15dp</dimen>
 </resources>
