--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,12 +16,17 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="FragmentTitleTextStyle">
-        <item name="android:textSize">30dp</item>
+    <style name="TextStyle">
+        <item name="android:fontFamily">@font/mandali</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 
-    <style name="FragmentDescriptionTextStyle">
-        <item name="android:textSize">15dp</item>
+    <style name="FragmentTitleTextStyle" parent="TextStyle">
+        <item name="android:textSize">@dimen/titleTextSize</item>
+    </style>
+
+    <style name="FragmentDescriptionTextStyle" parent="TextStyle">
+        <item name="android:textSize">@dimen/textSize</item>
     </style>
 
     <style name="layoutEdge">
