feat: style shoe detail

--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -95,6 +95,7 @@
             android:text="@string/cancel_button_text"
             style="@style/ButtonStyle"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/shoeDescriptionTextInputLayout"
             app:layout_constraintEnd_toStartOf="@+id/saveShoeButton"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent" />
@@ -106,9 +107,11 @@
             android:text="@string/save_changes_button_text"
             style="@style/ButtonStyle"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/shoeDescriptionTextInputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/cancelButton"
+            app:layout_constraintBaseline_toBaselineOf="@id/cancelButton"
             android:onClick="@{() -> shoeViewModel.addShoe(shoe)}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
