feat: simple format the shoe item

--- a/app/src/main/res/layout/shoe_item.xml
+++ b/app/src/main/res/layout/shoe_item.xml
@@ -1,50 +1,74 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="shoe"
             type="com.udacity.shoestore.models.Shoe"/>
+        <variable
+            name="idx"
+            type="java.lang.Integer" />
     </data>
 
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="200dp"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="20dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="128dp"
-            android:layout_weight="1"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            style="@style/layoutEdge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/nameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@{shoe.name}"/>
+                android:text="@{shoe.name}"
+                style="@style/DescriptionTextStyle"
+                app:layout_constraintBottom_toTopOf="@+id/sizeText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/sizeText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{Double.toString(shoe.size)}"/>
+                android:text="@{Double.toString(shoe.size)}"
+                style="@style/DescriptionTextStyle"
+                app:layout_constraintBottom_toTopOf="@+id/brandText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
             <TextView
                 android:id="@+id/brandText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@{shoe.brand}"/>
+                android:text="@{shoe.brand}"
+                style="@style/DescriptionTextStyle"
+                app:layout_constraintBottom_toTopOf="@+id/descriptionText"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/sizeText" />
 
             <TextView
                 android:id="@+id/descriptionText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@{shoe.description}"/>
-        </LinearLayout>
-    </LinearLayout>
+                android:text="@{shoe.description}"
+                style="@style/DescriptionTextStyle"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/brandText" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </layout>
