--- a/app/src/main/res/layout/shoe_item.xml
+++ b/app/src/main/res/layout/shoe_item.xml
@@ -17,6 +17,7 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="20dp">
 
+        <!-- ConstraintLayout here to create a chain of the different values. -->
         <androidx.constraintlayout.widget.ConstraintLayout
             style="@style/layoutEdge"
             android:layout_width="match_parent"
