refactor: Use converter for double to string in template
Documentation didn't work for me: https://developer.android.com/topic/libraries/data-binding/two-way\#converters
Instead I used just the value in the Converter methods like this:  https://stackoverflow.com/questions/55536577/two-way-databinding-with-custom-converter

--- a/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -10,6 +10,7 @@
         <variable
             name="shoeViewModel"
             type="com.udacity.shoestore.ShoeViewModel"/>
+        <import type="com.udacity.shoestore.Converter"/>
     </data>
 
     <!--
@@ -55,7 +56,7 @@
                 android:ems="10"
                 android:inputType="numberDecimal"
                 android:hint="@string/shoe_size_text"
-                android:text="@={`` + shoe.size}"/>
+                android:text="@={Converter.doubleToString(shoe.size)}"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
